# dank

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  build.js  buildsdr.js  buildxdr.js  canister_ids.json  dank.sh  dfx.json  package-lock.json
.github/: target_clean
.github/scripts/: dank-canister-serve.sh  rust-toolchain.sh
.github/workflows/: main.yml  rust.yml
candid/: dank.did  nft.did  piggy-bank.did  sdr.did  xdr-history-e2e.did  xdr.did  xdr_test.did  xtc-history-e2e.did  xtc.did
common/: Cargo.toml
dank/: Cargo.toml
dank/src/: history.rs  ledger.rs  lib.rs  minting.rs  proxy.rs  upgrade.rs
mint/: Cargo.toml
mint/src/: lib.rs
nft/src/: lib.rs  nft_ledger.rs  service.rs  types.rs  utils.rs
piggy-bank/: Cargo.toml
piggy-bank/src/: lib.rs
scripts/: interactions.sh
sdr/: Cargo.toml  README.md
sdr-history/e2e/: Cargo.toml
sdr-history/e2e/src/: lib.rs
sdr-history/sdr-history/: Cargo.toml
sdr-history/sdr-history-bucket/: Cargo.toml
sdr-history/sdr-history-bucket/src/: lib.rs
sdr-history/sdr-history-common/: Cargo.toml
sdr-history/sdr-history/src/: backend.rs  data.rs  flush.rs  ic.rs  lib.rs  mock.rs
sdr/src/: common_types.rs  cycles_wallet.rs  fee.rs  history.rs  ledger.rs  lib.rs  management.rs  meta.rs  stats.rs  tests.rs  upgrade.rs  utils.rs
spec/: MINTING.md
tests/smoke/: .gitignore  .prettierrc.js  README.md  lots_of_transactions.sh  manual.md  package.json
tests/smoke/src/backup/: live.js
tests/smoke/src/candid/: sdr.js  xdr.js  xtc.js
tests/smoke/src/check/: live.js
tests/smoke/src/sdr/: setupSdr.js
tests/smoke/src/userhistory/: live.js
tests/smoke/src/utils/: convert.js  readTransactionsFromBackup.js  stringify.js
tests/smoke/src/verify/: live.js
tests/smoke/src/whales/: live.js
tests/smoke/src/xdr/: setupXdr.js
tests/smoke/src/xtc/: setupXtc.js
xdr/: Cargo.toml  README.md
xdr-history/e2e/: Cargo.toml
xdr-history/e2e/src/: lib.rs
xdr-history/xdr-history/: Cargo.toml
xdr-history/xdr-history-bucket/: Cargo.toml
xdr-history/xdr-history-bucket/src/: lib.rs
xdr-history/xdr-history-common/: Cargo.toml
xdr-history/xdr-history-common/src/: types.rs
xdr-history/xdr-history/src/: backend.rs  data.rs  ic.rs  lib.rs  mock.rs
xdr/src/: common_types.rs  history.rs  ledger.rs  lib.rs  meta.rs  stats.rs  tests.rs  upgrade.rs
xtc/: Cargo.toml  README.md
xtc-history/e2e/: Cargo.toml
xtc-history/e2e/src/: lib.rs
xtc-history/xtc-history/: Cargo.toml
xtc-history/xtc-history-bucket/: Cargo.toml
xtc-history/xtc-history-bucket/src/: lib.rs
xtc-history/xtc-history-common/: Cargo.toml
xtc-history/xtc-history-common/src/: bucket.rs  lib.rs  types.rs
xtc-history/xtc-history-types/: Cargo.toml
xtc-history/xtc-history-types/src/: lib.rs
xtc-history/xtc-history/src/: backend.rs  data.rs  flush.rs  ic.rs  lib.rs  mock.rs  slice_con.rs
xtc/src/: common_types.rs  cycles_wallet.rs  fee.rs  history.rs  ledger.rs  lib.rs  management.rs  meta.rs  proxy.rs  stats.rs  tests.rs  upgrade.rs  utils.rs
