[workspace]
members = [
    "xtc",
    "piggy-bank",
    "xdr",
#    History
    "xtc-history/xtc-history",
    "xtc-history/xtc-history-bucket",
    "xtc-history/xtc-history-common",
    "xtc-history/e2e",
    "xdr-history/xdr-history",
    "xdr-history/xdr-history-bucket",
    "xdr-history/xdr-history-common",
    "xdr-history/e2e",
]

[profile.release]
lto = true
opt-level = 'z'
overflow-checks = true

[profile.bench]
overflow-checks = true
