[workspace]
members = [
    "piggy-bank",
    "xdr",
#    History
    "xdr-history/xdr-history",
    "xdr-history/xdr-history-bucket",
    "xdr-history/xdr-history-common",
    "xdr-history/e2e",
]

[profile.release]
lto = true
opt-level = 'z'
overflow-checks = true

[profile.bench]
overflow-checks = true
