[workspace]
members = [
    "piggy-bank",
    "sdr",
#    History
    "sdr-history/sdr-history",
    "sdr-history/sdr-history-bucket",
    "sdr-history/sdr-history-common",
    "sdr-history/e2e",
]

[profile.release]
lto = true
opt-level = 'z'
overflow-checks = true

[profile.bench]
overflow-checks = true
