[package]
name = "xtc"
version = "0.1.0"
authors = ["Parsa Ghadimi <parsa@fleek.co>"]
edition = "2018"

[dependencies]
xtc-history = {path="../xtc-history/xtc-history"}
xtc-history-common = {path= "../xtc-history/xtc-history-common" }
serde_bytes = "0.11"
ic-kit = "0.4.2"
ic-cdk = "0.3.1"
serde = { version="1.0.130", features = ["derive"] }
derive_builder = "0.10.2"
derive-new = "0.5"
cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "cap-sdk" }
cap-sdk-core = { git = "https://github.com/Psychedelic/cap.git", branch = "cap-sdk"}
cap-std = { git = "https://github.com/Psychedelic/cap", branch = "cap-sdk", package="cap-standards", features = ["alpha-dip20", "cap-sdk"] }
num-bigint = "0.4.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }


[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
