[package]
name = "xtc"
version = "0.1.0"
authors = ["Parsa Ghadimi <parsa@fleek.co>"]
edition = "2018"

[dependencies]
xtc-history = {path="../xtc-history/xtc-history"}
xtc-history-common = {path= "../xtc-history/xtc-history-common" }
serde_bytes = "0.11"
ic-kit = "0.4.2"
ic-cdk = "0.3.1"
serde = { version="1.0.130", features = ["derive"] }
derive_builder = "0.10.2"
derive-new = "0.5"
ledger-canister = { git="https://github.com/flyq/ic" }
ic-types = { git="https://github.com/flyq/ic" }
dfn_core = { git="https://github.com/flyq/ic" }
dfn_protobuf = { git="https://github.com/flyq/ic" }
cycles-minting-canister = { git="https://github.com/flyq/ic" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }


[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
