[package]
name = "xtc-history-e2e"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtc-history = {path="../xtc-history"}
xtc-history-types = {path="../xtc-history-types"}
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
serde = { version="1.0.116", features = ["derive"] }
serde_bytes = "0.11"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
