[package]
name = "xtc-history-common"
version = "0.1.0"
authors = ["Parsa Ghadimi <parsa@fleek.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3.0"
serde = { version="1.0.116", features = ["derive"] }
