[package]
name = "xtc-history"
version = "0.1.0"
authors = ["Parsa Ghadimi <parsa@fleek.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtc-history-common = {path= "../xtc-history-common" }
ic-cdk = "0.3.0"
serde = { version="1.0.116", features = ["derive"] }
serde_bytes = "0.11"
async-std = { version="1.9.0", features = ["attributes"] }
